# claude-code-auth

./: .gitignore  README.md  pyproject.toml
bench/: README.md  analyze_results.py  batch_api_probe.py  build_synthetic_history.py  cache_ttl_gap_test.py  cold_cache_stampede_test.py  concurrency_http2_test.py  concurrency_test.py  context_length_decode_test.py  run_sweep.py  synthetic_multiturn_test.py
bench/specs/: connection_reuse_ab.json  effort_max_retest.json  effort_sweep_full.json  example_effort_sweep.json  task011_stream_vs_nonstream.json  task018_thinking_display_ttft.json  task018_thinking_display_ttft_remainder.json  task021_interleaved_stream_vs_nonstream.json  task021_interleaved_stream_vs_nonstream_batch2.json  thinking_vs_visible_phase_rate.json
docs/: THROUGHPUT_RESEARCH.md
plan/backlog/: TASK-001.yaml  TASK-002.yaml  TASK-003.yaml  TASK-004.yaml  TASK-005.yaml  TASK-006.yaml  TASK-007.yaml  TASK-008.yaml  TASK-009.yaml  TASK-010.yaml  TASK-011.yaml  TASK-012.yaml  TASK-013.yaml  TASK-014.yaml  TASK-015.yaml  TASK-016.yaml  TASK-017.yaml  TASK-018.yaml  TASK-019.yaml  TASK-020.yaml  TASK-021.yaml  TASK-022.yaml  TASK-023.yaml  TASK-024.yaml  TASK-025.yaml
plan/done/: TASK-001.yaml  TASK-002.yaml  TASK-003.yaml  TASK-004.yaml  TASK-005.yaml  TASK-006.yaml  TASK-007.yaml  TASK-008.yaml  TASK-009.yaml  TASK-010.yaml  TASK-011.yaml  TASK-012.yaml  TASK-013.yaml  TASK-014.yaml  TASK-015.yaml  TASK-016.yaml  TASK-017.yaml  TASK-018.yaml  TASK-019.yaml  TASK-020.yaml  TASK-021.yaml  (+4 more)
tests/: test_keychain.py  test_manager.py  test_settings.py
(+14 files in other folders)
